Fix style for todo list input on mobile

--- a/assets/css/apps/note/AddNote.css
+++ b/assets/css/apps/note/AddNote.css
@@ -53,7 +53,8 @@
 
 .add-note input,
 .add-note textarea {
-  width: 100%;
+  /* width: 100%; */
+  margin-left: 10px;
   font-size: 1rem;
   padding: 8px;
   border-radius: 6px;
